# osmium

./: .gitignore  .pnp.cjs  .yarnrc.yml  404.html  README.md  index.html  package.json  remove-me-02fd9ae66d2443f1a92b.txt  remove-me-031f29e69a154980b2db.txt  remove-me-12390190201f4f6388f2.txt  remove-me-1385d09aae5c4f31a87c.txt  remove-me-169bf1f7b3864572b7f3.txt  remove-me-1b9390d0431343b6a1aa.txt  remove-me-1fc31b586dea4ebd84f8.txt  remove-me-21dbe7c16cca40278b90.txt  remove-me-227b602026ca43dc8864.txt  remove-me-2ae576bd38cf4420ac78.txt  remove-me-309b4e3a7b084e2690ae.txt  remove-me-340ad02ee7b54230a9fa.txt  remove-me-34219c48b31d404ab611.txt  remove-me-346569b75914458289e6.txt  remove-me-359f8e4bca33446f9c21.txt  remove-me-3b2113c3bf8249c2b7e5.txt  remove-me-3bb6aa5950014f3287e8.txt  remove-me-3ce10a5cfd484331b1db.txt  remove-me-3d7b436aaff6424d8a5d.txt  remove-me-3ebde08f11694be5b2a3.txt  remove-me-41a7fb1159c54b71872b.txt  remove-me-4225b931e4864c6cb94c.txt  remove-me-436d1796492c4a7b805d.txt  remove-me-443a258d5150475d83cb.txt  remove-me-455152676f41420e9498.txt  remove-me-4630e16a9c3d455b8ed3.txt  remove-me-46f6f27d2c1440dcba65.txt  remove-me-4c91a3eade6b4b7f8e91.txt  remove-me-4d39e9d091cc4ff496a6.txt  remove-me-4d698f3fd60f4a78a59c.txt  remove-me-4e4a66fb75f34ccaa9ed.txt  remove-me-514e1c9d41fb4b8190e8.txt  remove-me-536c835ec85f45efaf8e.txt  (+62 more)
libs/ast-extractor/: Cargo.toml  interactable_nodes.md  package.json
libs/ast-extractor/src/: errors.rs  extract.rs  lib.rs  retriever.rs
libs/ast-extractor/src/retriever/: contract.rs  enum.rs  error.rs  event.rs  expr_call.rs  finder.rs  function.rs  stmts.rs  struct.rs  udt.rs  using.rs
libs/ast-extractor/src/retriever/finder/: find_node.rs
libs/ast-extractor/tests/files/contracts/: inheritance.sol  two.sol
libs/ast-extractor/tests/files/errors/: one.sol
libs/ast-extractor/tests/files/event/: one.sol
libs/ast-extractor/tests/files/functions/: one.sol
libs/ast-extractor/tests/files/structs/: one.sol
libs/ast-extractor/tests/files/udt/: one.sol
libs/foundry-wrapper/: Cargo.toml  package.json
libs/foundry-wrapper/src/: compiler.rs  error.rs  lib.rs  types.rs  utils.rs
libs/foundry-wrapper/src/types/: project.rs  project_compile_output.rs  project_config.rs  workspace_config.rs
libs/foundry-wrapper/src/utils/: executable.rs  install.rs  path.rs
libs/lsp-handler/: Cargo.toml  package.json
libs/lsp-handler/src/: connection.rs  dispatcher.rs  handler.rs  helpers.rs  jsonrpc.rs  lib.rs
libs/lsp-handler/src/jsonrpc/: error.rs
libs/lsp-server-wrapper/: Cargo.toml  package.json
libs/lsp-server-wrapper/src/: client.rs  jsonrpc.rs  lib.rs  server.rs  service.rs
libs/lsp-server-wrapper/src/jsonrpc/: error.rs
libs/lsp-server-wrapper/src/service/: state.rs
toolchains/solidity/core/: Cargo.toml  package.json
toolchains/solidity/core/crates/extension/: Cargo.toml  Makefile
toolchains/solidity/core/crates/extension/src/: lib.rs
toolchains/solidity/core/crates/foundry-compiler-server/: Cargo.toml
toolchains/solidity/core/crates/foundry-compiler-server/src/: affected_fiiles_store.rs  affected_files_store.rs  main.rs  utils.rs
toolchains/solidity/core/crates/foundry-debugger/: Cargo.toml  Makefile
toolchains/solidity/core/crates/foundry-debugger/src/: main.rs
toolchains/solidity/core/crates/foundry-deploy/: Cargo.toml
toolchains/solidity/core/crates/foundry-deploy/src/: main.rs
toolchains/solidity/core/crates/linter-cli/: .gitignore  Cargo.toml  readme.md
toolchains/solidity/core/crates/linter-cli/src/: main.rs
toolchains/solidity/core/crates/linter-lib/: Cargo.toml  Makefile
toolchains/solidity/core/crates/linter-lib/src/: ignore.rs  lib.rs  linter.rs  types.rs
toolchains/solidity/core/crates/linter-lib/src/rules/: rule_impl.rs  types.rs
toolchains/solidity/core/crates/linter-lib/src/types/: file_diags.rs  ignore.rs  lint_diag.rs  position.rs  range.rs  severity.rs
toolchains/solidity/core/crates/linter-lib/testdata/SolidHunterIgnoreRule/: file.sol
toolchains/solidity/core/crates/linter-lib/tests/: linter.rs
toolchains/solidity/core/crates/linter-server/: Cargo.toml
toolchains/solidity/core/crates/linter-server/src/: get_content.rs  lib.rs  main.rs  utils.rs
toolchains/solidity/core/crates/slither/: test.json
toolchains/solidity/core/crates/slither-server/: Cargo.toml
toolchains/solidity/core/crates/slither-server/src/: error.rs  main.rs  slither.rs  types.rs  utils.rs
toolchains/solidity/core/crates/slither/src/: main.rs  slither.rs  types.rs
toolchains/solidity/core/crates/tests-positions-server/: Cargo.toml
toolchains/solidity/core/crates/tests-positions-server/src/: get_tests_positions.rs  main.rs
toolchains/solidity/core/scripts/: copy-core.js
toolchains/solidity/linter/core/solidhunter-lib/: Cargo.toml
toolchains/solidity/linter/core/solidhunter-lib/src/: error.rs  errors.rs  lib.rs  linter.rs  types.rs
toolchains/solidity/linter/core/solidhunter-lib/src/rules/: factory.rs  mod.rs  rule_impl.rs  types.rs  utils.rs
toolchains/solidity/linter/core/solidhunter-lib/testdata/AvoidTxOrigin/: .solidhunter.json
toolchains/solidity/linter/core/solidhunter-lib/testdata/ConstNameSnakeCase/: .solidhunter.json  findings.csv
toolchains/solidity/linter/core/solidhunter-lib/testdata/ContractNameCamelCase/: .solidhunter.json
toolchains/solidity/linter/core/solidhunter-lib/testdata/ContractNamePascalCase/: .solidhunter.json  findings.csv
toolchains/solidity/linter/core/solidhunter-lib/testdata/CustomErrors/: .solidhunter.json  findings.csv
toolchains/solidity/linter/core/solidhunter-lib/testdata/EmptyBlock/: .solidhunter.json  file.sol  findings.csv
toolchains/solidity/linter/core/solidhunter-lib/testdata/EventNameCamelCase/: .solidhunter.json  file.sol  findings.csv
toolchains/solidity/linter/core/solidhunter-lib/testdata/ExplicitTypes/: .solidhunter.json
toolchains/solidity/linter/core/solidhunter-lib/testdata/FoundryFunctionName/: .solidhunter.json  file.sol  findings.csv
toolchains/solidity/linter/core/solidhunter-lib/tests/: linter.rs
(+314 files in other folders)
