[package]
name = "ast-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
proc-macro2 = { version = "1.0.66", features = ["span-locations"]}
syn-solidity =  { git = "https://github.com/alloy-rs/core.git", features = ["visit"] }
thiserror = "1"
syn = "2"