[package]
name = "osmium-libs-lsp-handler"
description = "Dispatch LSP messages to all hooked handlers"
license = "GPL-3.0-or-later"
repository = "https://github.com/astrodevs-labs/osmium"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.94.1"
serde = "1.0.188"
serde_json = "1.0.107"
tracing = { version = "0.1.39", features = [] }
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.0"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"

[lib]
crate-type = ["cdylib", "rlib"]