[package]
name = "extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
osmium-libs-lsp-handler = { path = "../../../../../libs/lsp-handler", version = "0.0.1" }
linter-server = { path= "../linter-server"}
js-sys = "0.3.64"