[package]
name = "foundry-deploy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmium-libs-foundry-wrapper = { path = "../../../../../libs/foundry-wrapper" }
tower-lsp = "0.20.0"
tokio = { version = "1.34.0", features = ["full"] }
