[package]
name = "solidhunter-lib"
description = "Solidhunter/Osmium solidity linter library"
repository = "https://github.com/astrodevs-labs/osmium"
version = "0.0.2"
edition = "2021"
authors = ["Astrodevs Labs"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
anyhow = "1.0"
glob = "0.3.0"
thiserror = "1.0"
osmium-libs-solidity-ast-extractor = { path = "../../../../../libs/ast-extractor", version = "0.1.0" }
regex = "1.9.6"
