[package]
name = "linter-server"
license = "GPL-3.0-or-later"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmium-libs-lsp-handler = { path = "../../../../../libs/lsp-handler", version = "0.0.3" }
solidhunter-lib = { path = "../linter-lib", version = "0.2.0" }
js-sys = "0.3.64"