[package]
name = "linter-server"
license = "GPL-3.0-or-later"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmium-libs-lsp-server-wrapper = { path = "../../../../../libs/lsp-server-wrapper", version = "0.2.0" }
solidhunter-lib = { path = "../linter-lib", version = "0.2.1" }
glob = "0.3.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
