[package]
name = "slither-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os = "0.1.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version="1.34.0", features = ["full"] }
tower-lsp = "0.20.0"
colored = "2.0.4"
thiserror = "1.0.50"
glob = "0.3.1"
toml = "0.8.8"
once_cell = "1.19.0"
tokio-utils = "0.1.2"
tokio-util = "0.7.10"
