[package]
name = "tests-positions-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmium-libs-lsp-server-wrapper = { path = "../../../../../libs/lsp-server-wrapper", version = "0.2.0" }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = {version = "1.34.0", features = ["full"] }
tower-lsp = "0.20.0"
osmium-libs-solidity-ast-extractor = { path = "../../../../../libs/ast-extractor", version = "0.1.2" }
regex = "1.10.2"
